--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,18 @@ code {
     monospace;
 }
 
-
-#map {
-    height: 100vh;
+.container {
+    display: flex;
+    flex-wrap: row;
 }
+
+/*#map {
+    height: 100vh;
+    width: 75%;
+}*/
+
+.sidebar {
+    height: 100vh;
+    width: 25%;
+}
+
