--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+html, body{
+  height: 100vh;
+  margin: auto;
 }
-
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-size: 10px;
+
 }
 
 code {
@@ -22,13 +22,39 @@ code {
     flex-wrap: row;
 }
 
-/*#map {
-    height: 100vh;
-    width: 75%;
-}*/
-
 .sidebar {
-    height: 100vh;
+    max-height: 100vh;
+    overflow: scroll;
     width: 25%;
+}
+
+input#search {
+    width: 100%;
+    margin-top: .3rem;
+    font-size: .8rem;
+    min-height: 3rem;
+}
+
+.sight-list {
+    list-style: none;
+    padding: 0 10px;
+}
+
+.sight-list li {
+    display:flex;
+    align-items: center;
+    color: white;
+    margin-top: .4rem;
+    font-size: .8rem;
+    border: 1px solid rgba(0,0,0,0.7);
+    border-radius: 3px;
+    background-color: rgba(0,0,0,0.6);
+    min-height: 2rem;
+    padding: 2px;
+}
+
+.sight-list li img {
+    height: 100%;
+    margin-right: 5px;
 }
 
