--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,16 @@ input#search {
     margin-right: 5px;
 }
 
+/*MEDIA QUERY*/
+@media only screen and (max-width : 640px) {
+    .sight-name {
+        display: none;
+    }
+    .sight-list li {
+        width: 2rem;
+    }
+    .sidebar {
+        min-width: 2.5rem;
+        width: 15%;
+    }
+}
