--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,10 @@ input#search {
     margin-right: 5px;
 }
 
+.error {
+    text-align: center;
+}
+
 /*MEDIA QUERY*/
 @media only screen and (max-width : 640px) {
     .sight-name {
